Reporting: Refactoring der Klasse ReportingReportvorlage.java